Remove IntelliJ warnings in tests